--- a/DataStructures/Hashtables/manipulations.ipynb
+++ b/DataStructures/Hashtables/manipulations.ipynb
@@ -21,7 +21,7 @@
     "            'rings':23,\n",
     "            'ties':20,\n",
     "            'pants':45}\n",
-    "print(hashtable1)"
+    "print(hashtable1)\n"
    ]
   },
   {
@@ -68,6 +68,67 @@
     "     \n",
     "print(arr)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000\n",
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=[('car',2000),('bike',1000)]\n",
+    "for tpl in x:\n",
+    "    x=(lambda x: x[1])(tpl)\n",
+    "    print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple': 19, 'oranges': 4, 'banana': 3}\n",
+      "['apple']\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr= [('apple',4),('oranges',3),('apple',3),('oranges',1),('apple',12),('banana',3)]\n",
+    "hashmap={}\n",
+    "for fruit,count in arr:\n",
+    "    if fruit in hashmap:\n",
+    "        hashmap[fruit]+= count\n",
+    "    else:\n",
+    "        hashmap[fruit]=count\n",
+    "   \n",
+    "print(hashmap)\n",
+    "arr=[]\n",
+    "max_val=max(hashmap.values())\n",
+    "for fruit,count in hashmap.items():\n",
+    "    if count==max_val:\n",
+    "        arr.append(fruit)\n",
+    "        \n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
