--- a/DataStructures/Hashtables/manipulations.ipynb
+++ b/DataStructures/Hashtables/manipulations.ipynb
@@ -21,7 +21,7 @@
     "            'rings':23,\n",
     "            'ties':20,\n",
     "            'pants':45}\n",
-    "print(hashtable1)\n"
+    "print(hashtable1)"
    ]
   },
   {
@@ -87,25 +87,26 @@
     "x=[('car',2000),('bike',1000)]\n",
     "for tpl in x:\n",
     "    x=(lambda x: x[1])(tpl)\n",
-    "    print(x)\n"
+    "    print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'apple': 19, 'oranges': 4, 'banana': 3}\n",
-      "['apple']\n"
+      "{'apple': 19, 'oranges': 4, 'banana': 3, 'peas': 19}\n",
+      "['apple', 'peas']\n"
      ]
     }
    ],
    "source": [
-    "arr= [('apple',4),('oranges',3),('apple',3),('oranges',1),('apple',12),('banana',3)]\n",
+    "arr= [('apple',4),('oranges',3),('apple',3),\n",
+    "      ('oranges',1),('apple',12),('banana',3),('peas',19)]\n",
     "hashmap={}\n",
     "for fruit,count in arr:\n",
     "    if fruit in hashmap:\n",
@@ -122,6 +123,46 @@
     "        \n",
     "print(arr)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'peas', 'watermelon']\n",
+      "{'apple': 19, 'oranges': 4, 'banana': 3, 'peas': 19, 'watermelon': 19}\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr= [('apple',4),('oranges',3),('apple',3),('oranges',1),\n",
+    "      ('apple',12),('banana',3), ('peas',19),('watermelon',19)]\n",
+    "hashmap={}\n",
+    "for fruit,count in arr:\n",
+    "    #hashmap[fruit] = count + hashmap.get(hashmap[fruit],count)\n",
+    "    if fruit in hashmap:\n",
+    "        hashmap[fruit]+=count\n",
+    "    else:\n",
+    "        hashmap[fruit]=count\n",
+    "\n",
+    "res= [fruit for fruit,count in sorted(hashmap.items(), \n",
+    "      key=lambda item: item[1]) \n",
+    "      if count == max(hashmap.values()) ]\n",
+    "\n",
+    "print(res)\n",
+    "print(hashmap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
