--- a/DataStructures/Python_ShortCuts_and_Language/Object_Oriented_Design/oop.ipynb
+++ b/DataStructures/Python_ShortCuts_and_Language/Object_Oriented_Design/oop.ipynb
@@ -6,6 +6,61 @@
    "source": [
     "OOP - inheritance, encapsulation, polymorphism,...... decorators in python,..tbd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Tom:20000:32, Nick:200000:26, Ken:8000:22]\n",
+      "[Ken:8000:22, Nick:200000:26, Tom:20000:32]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Employee:\n",
+    "    def __init__(self, name, salary, age):\n",
+    "         self.name = name\n",
+    "         self.salary = salary         \n",
+    "         self.age = age\n",
+    "\n",
+    "    def __repr__(self):         \n",
+    "        return self.__str__() \n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return \"{}:{}:{}\".format(self.name, self.salary, self.age)\n",
+    "\n",
+    "e1 = Employee(\"Tom\", 20000, 32)\n",
+    "e2 = Employee(\"Ken\", 8000, 22)\n",
+    "e3 = Employee(\"Nick\", 200000, 26)\n",
+    "\n",
+    "arr=[e1,e2,e3]\n",
+    "\n",
+    "\n",
+    "a=sorted(arr, key=lambda x:x.age, reverse=True) #sort decreasing\n",
+    "\n",
+    "b=sorted(arr, key=lambda x:x.age, reverse=False) #sort increasing\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
